# domiki-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  diag_output.txt  docker-compose.yml  laws_manifest.csv  pyproject.toml
data/raw_pdfs/: download_report.txt
docs/: download-laws-prompt-v2.md  download-laws-prompt-v3.md  download-laws-prompt-v4.md  download-laws-prompt-v5.md  download-laws-prompt-v6.md  download-laws-prompt-v7.md  download-laws-prompt.md  fix-answer-rendering-prompt.md  fix-cached-widget-prompt.md  fix-logs-login-prompt.md  fix-query-button-prompt.md  fix-turso-connection-prompt.md  fix-welcome-hide-prompt.md  frontend-refresh-prompt.md  phase1-prompt.md  phase2-prompt.md  phase3-prompt.md  phase4a-prompt.md  phase4b-prompt.md  phase4d-prompt.md  update-generation-prompt.md
scripts/: _diag_fixed_elements.py  ask.py  audit_collection.py  diagnose_chunking_paths.py  diagnose_pdfs.py  diagnose_retrieval.py  download_laws.py  eval.py  ingest.py  init_db.py  migrate_to_cloud.py  query.py  verify_setup.py
src/: config.py
src/common/: tokenizer.py
src/evaluation/: models.py  run_eval.py  test_cases.py
src/generation/: answer_generator.py  claude_client.py  models.py  prompts.py
tests/: test_admin_page.py  test_answer_generator.py  test_chunker.py  test_citations.py  test_db_backend.py  test_embedder_retry.py  test_hybrid_search.py  test_metadata_extractor.py  test_migrate.py  test_prompts.py  test_query_logger.py  test_rebuild_atomicity.py  test_reranker.py  test_retriever_e2e.py  test_site_gate.py  test_structure_detector.py  test_text_cleaner.py  test_tokenizer_parity.py
ui/: streamlit_app.py
(+1293 files in other folders)
