[project]
name = "domiki-rag"
version = "0.1.0"
description = "Greek construction legislation Q&A system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # RAG framework
    "llama-index>=0.12",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-cohere",
    "llama-index-llms-anthropic",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-retrievers-bm25",
    # Vector DB
    "qdrant-client>=1.12",
    # LLM clients
    "anthropic>=0.40",
    "cohere>=5.13",
    # PDF parsing
    "pymupdf>=1.25",
    "pdfplumber>=0.11",
    # BM25 sparse vectors (pure Python, no Rust/compilation needed)
    "rank-bm25>=0.2",
    # Token counting
    "tiktoken>=0.7",
    # Force newer versions with Python 3.14 pre-built wheels
    "pillow>=12",
    "numpy>=2",
    # Config
    "python-dotenv>=1.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    # UI (>=1.43 for Python 3.14 compatibility with Pillow 12.x)
    "streamlit>=1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "ruff>=0.8",
    "ipython",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# SYSTEM_PROMPT is locked verbatim; line-length doesn't apply to Greek prose.
"src/generation/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
